<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="quiz_activity_main_swipe">Swipe left/right to choose your game mode</string>
    <string name="quiz_activity_main_highscore1">HighScore: %d</string>
    <string name="quiz_activity_main_highscore2">HighScore: %1$d / %2$d</string>
    <string name="quiz_activity_main_loading">@string/question_loading</string>
    <string name="quiz_activity_main_start">Start</string>
    <string name="quiz_activity_main_errorloading">@string/question_errorloading</string>
    <string name="quiz_activity_main_toastpleaseconnect">You need to be connected to your Google+ account to play this game</string>
    <string name="quiz_gamerules_onetry_title">One try!</string>
    <string name="quiz_gamerules_onetry_explanation">Answer to all questions as fast as you can.\n\nEach second counts and you have only one try!</string>
    <string name="quiz_gamerules_10questions_title">10 questions</string>
    <string name="quiz_gamerules_10questions_explanation">Try to answer the faster you can.\n\nEach second counts!</string>
    <string name="quiz_gamerules_marathon_title">Marathon</string>
    <string name="quiz_gamerules_marathon_explanation">Answer the most question you can.</string>
    <string name="quiz_gamerules_splitscreen_title">Split Screen</string>
    <string name="quiz_gamerules_splitscreen_explanation">Play against a friend on the same screen : be the first to get 10 points.\n\nAnswer the first to get the point, but answer false and you\'ll give it to your friend.</string>
    <string name="quiz_gamerules_versuscloud_title">Me VS the World</string>
    <string name="quiz_gamerules_versuscloud_explanation">Play against friends and other players all over the world.\n\nSelect a challenger or answer to a challenge.</string>
    <string name="quiz_game_signingin">Signing in with Google</string>
    <string name="quiz_game_signingout">Signing out</string>
    <string name="quiz_game_signout">Sign Out</string>
    <string name="quiz_game_signoutexplanation">Sign out from Google Play Games</string>
    <string name="quiz_game_connexionerror">There was an issue with sign in.  Please try again later.</string>
    <string name="quiz_settings_title_base">Game preferences</string>
    <string name="quiz_settings_checkbox_acceptnottranslated_title">Accept English question</string>
    <string name="quiz_settings_checkbox_acceptnottranslated_summaryon">Uncheck to refuse the %d more English questions.</string>
    <string name="quiz_settings_checkbox_acceptnottranslated_summaryoff">Check to accept the %d more English questions.</string>
    <string name="quiz_settings_title_optimization">Game optimisation</string>
    <string name="quiz_settings_checkbox_acceptallanimations_title">Allow all animations</string>
    <string name="quiz_settings_checkbox_acceptallanimations_summaryon">Uncheck to stop most animations. It saves battery and slowest devices.</string>
    <string name="quiz_settings_checkbox_acceptallanimations_summaryoff">Check to accept all animations. It uses more battery but it\'s really nicer.</string>
    <string name="quiz_settings_title_googleplaygames">Google Play Games</string>
    <string name="quiz_activity_question_onetry_questionnumber">Question %1$d / %2$d</string>
    <string name="quiz_activity_question_10questions_questionnumber">Question %d / 10</string>
    <string name="quiz_activity_question_questionnumber">Question %d</string>
    <plurals name="quiz_activity_question_totalpoints">
        <item quantity="one">%d pt</item>
        <item quantity="other">%d pts</item>
    </plurals>
    <string name="quiz_activity_question_marathon_wronganswersleft_unlimited">unlimited wrong answer accepted !</string>
    <plurals name="quiz_activity_question_marathon_wronganswersleft">
        <item quantity="one">%d wrong answer accepted</item>
        <item quantity="other">%d wrong answers accepted</item>
    </plurals>
    <string name="quiz_activity_question_hurryup">Hurry up!</string>
    <string name="quiz_fragment_question_next">@string/next</string>
    <string name="quiz_fragment_question_questionby">by %s</string>
    <string name="quiz_fragment_question_right">@string/right</string>
    <string name="quiz_fragment_question_false">@string/wrong</string>
    <string name="quiz_fragment_question_toolate">Too late!!!</string>
    <string name="quiz_activity_finish_finish">Finish!!!</string>
    <string name="quiz_activity_finish_newhighscore">New High Score!</string>
    <string name="quiz_activity_finish_score1">Score: %d</string>
    <string name="quiz_activity_finish_score2">Score: %1$d / %2$d</string>
    <string name="quiz_activity_finish_share">Share your score with your friends</string>
    <string name="quiz_activity_finish_back">Go back to the Main page</string>
    <string name="quiz_activity_finish_loading">@string/question_loading</string>
    <string name="quiz_activity_finish_restart">Restart now!</string>
    <string name="quiz_activity_finish_errorloading">@string/question_errorloading</string>
    <string name="quiz_activity_finish_sharetitle">Share your score with…</string>
    <string name="quiz_activity_finish_sharesubject">Beat me on %s</string>
    <string name="quiz_activity_finish_sharetext">I did %1$s in the %2$s, can you beat me? %3$s</string>
    <string name="quiz_activity_finish_winner">You win!!</string>
    <string name="quiz_activity_finish_confirmwinner">Confirm you are the best right now!</string>
    <string name="quiz_activity_finish_looser">You loose :(</string>
    <string name="quiz_activity_finish_takerevenge">Take your revenge right now!</string>
    <string name="quiz_activity_finish_tie">Tie</string>
    <string name="quiz_activity_finish_beathim">Try again to win!</string>
    <plurals name="quiz_activity_finish_totalpoints">
        <item quantity="one">%s point</item>
        <item quantity="other">%s points</item>
    </plurals>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="question_loading">Loading next questions…</string>
    <string name="question_errorloading">Error while loading Quiz. Click to retry.</string>
    <string name="quiz_activity_question_onetry_backpressed">You only have one try! Don\'t press back now!</string>
</resources>
